initial overhaul for create-lockers page and model overhaul

--- a/Lockit.Web/Components/Layout/NavMenu.razor
+++ b/Lockit.Web/Components/Layout/NavMenu.razor
@@ -6,8 +6,8 @@
 	<MudNavLink Href="lists" Icon="@Icons.Material.TwoTone.AdminPanelSettings">
 		Overview
 	</MudNavLink>
-	<MudNavLink Href="setup" Icon="@Icons.Material.TwoTone.AddBox">
-		Setup
+	<MudNavLink Href="create-lockers" Icon="@Icons.Material.TwoTone.AddBox">
+		Create Lockers
 	</MudNavLink>
 	<MudNavLink Href="import-reservations" Icon="@Icons.Material.TwoTone.SimCardDownload">
 		Import reservations
