--- a/Lockit.Web/Components/App.razor
+++ b/Lockit.Web/Components/App.razor
@@ -19,6 +19,7 @@
 	<Routes @rendermode="InteractiveServer" />
 	<script src="_framework/blazor.web.js"></script>
 	<script src="@Assets["_content/MudBlazor/MudBlazor.min.js"]"></script>
+	<script src="_content/EasyCsv.Components/EasyCsv.js"></script>
 </body>
 
 </html>
