renamed create-lockers to add-lockers

--- a/Lockit.Web/Components/Layout/NavMenu.razor
+++ b/Lockit.Web/Components/Layout/NavMenu.razor
@@ -6,11 +6,17 @@
 	<MudNavLink Href="lists" Icon="@Icons.Material.TwoTone.AdminPanelSettings">
 		Overview
 	</MudNavLink>
-	<MudNavLink Href="create-lockers" Icon="@Icons.Material.TwoTone.AddBox">
-		Create Lockers
+	<MudNavLink Href="add-lockers" Icon="@Icons.Material.TwoTone.AddBox">
+		Add Lockers
 	</MudNavLink>
-	<MudNavLink Href="import-reservations" Icon="@Icons.Material.TwoTone.SimCardDownload">
-		Import reservations
+	<MudNavLink Href="" Disabled Icon="@Icons.Material.TwoTone.GroupAdd">
+		Add Students
+	</MudNavLink>
+	<MudNavLink Href="import-reservations" Icon="@Icons.Material.TwoTone.UploadFile">
+		Import Reservations
+	</MudNavLink>
+	<MudNavLink Href="" Disabled Icon="@Icons.Material.TwoTone.CloudDownload">
+		Export Locker Data
 	</MudNavLink>
 	<MudDivider DividerType="DividerType.Middle" Light />
 	<MudNavLink Disabled Href="" Icon="@Icons.Material.Filled.CompareArrows">
